History: Correctly wrap lots of tags
When there are many tags in a commit we want them to wrap.

This fixes lighthouse ticket #220.

--- a/html/views/history/history.css
+++ b/html/views/history/history.css
@@ -130,7 +130,7 @@ a.showdiff {
 	font-size: 9px;
 	font-family: Helvetica;
 	border: 1px solid black;
-	margin-right: 5px;
+	margin-right: 2px;
 	padding: 1px 3px 1px 3px;
 	-webkit-border-radius: 2px;
 }
